--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "16.13.1",
     "react-jsonschema-form": "1.8.1",
     "react-router-dom": "5.2.0",
